# k4s-v2

./: Cargo.toml  README.md  build_rusttest.sh  build_zigtest.sh
demo/zig/: bootstrap.k4sm  build-k4s.sh  build-zig.sh  clean.sh  demo.zig  run.sh
src/: main.rs
src/debugger/: mod.rs  v2.rs
src/debugger/assets/: style.css
src/k4s/: mod.rs
src/k4s/contexts/: asm.rs  llvm.rs  machine.rs  mod.rs
src/k4s/contexts/machine/: mod.rs  ram.rs
src/k4s/parsers/: asm.rs  machine.rs  mod.rs
src/k4s/parsers/llvm/: consteval.rs  mod.rs
src/tests/: mod.rs
src/tests/c/: test1.bc  test1.k4sm  test1.ll  test2.c  test2.ll
src/tests/k4sm/: inctest1.k4sm  inctest2.k4sm  test1.k4sm  test2.k4sm  test3.k4sm  test4.k4sm
src/tests/rust/: Cargo.toml
src/tests/rust/.cargo/: config.toml
src/tests/rust/src/: lib.rs
src/tests/zig/: .gitignore  bootloader.k4sm  bootstrap.k4sm  kernel.k4sm  kernel_bootstrap.k4sm  zigtest.k4sm  zigtest_main.k4sm
src/tests/zig/src/: bootloader.zig  kernel.zig  zigtest.zig
