[package]
name = "k4s-v2"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "k4s"
path = "src/main.rs"

[dependencies]
bitflags = "2.0.2"
llvm-sys = { version = "130.0.0" }
llvm-ir = { version = "0.8.2", features = ["llvm-13"] }
nom = "7.1.3"
glob = "0.3.1"
rustc-demangle = "0.1.22"
rustc-hash = "1.1.0"
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
slint = "1.0.0"

[profile.release]
debug = 1
