[package]
name = "k4s-v2"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "k4s"
path = "src/main.rs"

[dependencies]
bitflags = "2.0.2"
llvm-ir = { git = "https://github.com/clstatham/llvm-ir", features = ["llvm-13"] }
nom = "7.1.3"
glob = "0.3.1"
rustc-demangle = "0.1.22"
rustc-hash = "1.1.0"
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
# slint = "1.0.0"
clap = { version = "4.2.1", features = ["derive"] }
# dioxus = "0.3.2"
# dioxus-desktop = "0.3.0"
eframe = "0.22.0"
llvm-sys = { version = "130.1.2" }
tokio = { version = "1.27.0", features = ["full"] }

[profile.release]
debug = 1
